<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/Navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="570dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="187dp">>

        <Button
            android:id="@+id/homeButton"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home" />

        <Button
            android:id="@+id/searchButton2"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/search" />

        <Button
            android:id="@+id/moreButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/more" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="214dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coursequesticon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="330dp"
        android:text="Welcome to the homepage of CourseQuest!"
        android:textSize="35dp"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toTopOf="@+id/Navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEW ONE"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="438dp" />

</androidx.constraintlayout.widget.ConstraintLayout>