<resources>
    <string name="app_name">Course Quest</string>
    <string name="saved_course_message">You have no saved courses:/</string>
    <string name="saved_course_title">My Courses</string>
    <string name="popular_subjects">Popular Subjects</string>
    <string name="recent">Recent</string>
    <string name="go">Go!</string>
    <string name="explore">Explore</string>
    <string name="doneText">Done</string>
    <string name="numResultsText">0</string>
    <string name="progressDialogText">Results</string>

    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="FAQ">FAQ</string>
    <string name="courseColorsText">Color Palette</string>
    <string name="settingsGeneralTitle">General</string>
    <string name="settingsAppearanceTitle">Appearance</string>


    <string name="share_with">Share With</string>
    <string name="cancel">Cancel</string>

    <string name="no_results">No Results :/</string>

    <string name="order">Order</string>
    <string name="filterABC">Alphabetical ABC</string>
    <string name="filterZYX">Alphabetical ZYX</string>
    <string name="filterDefault">None</string>
    <string name="providers">Providers</string>
    <string name="filterCodeCademy">CodeCademy</string>
    <string name="filterCoursera">Coursera</string>
    <string name="filterFutureLearn">FutureLearn</string>
    <string name="filterSkillShare">SkillShare</string>
    <string name="clear_filters">Clear Filters</string>

    <string name="invalid_search">Use your words; null is an invalid search:/</string>
    <string name="close">Close</string>

    <string name="blurEffectDescription">Adds a blur effect to screen to add focus to the share options</string>
    <string name="noCourseImageDescription">An image view that is displayed on the home page only when the user has no saved courses</string>
</resources>
