<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <item
        android:id="@+id/save"
        android:icon="@drawable/like_icon"
        android:title="Like:)" />
    <item
        android:id="@+id/unsave"
        android:title="Dislike:(" />
</menu>